client/src/app/panels/series-direction-correlation/series-direction-correlation.component.scss
:host {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
}

h3 {
    display: block;
    text-align: center;
    font-size: 20px;
    margin: 0;
    padding: 0;
}

.container {
    flex: 1;
    flex-grow: 1;
    display: block;
    position: relative;
    margin-bottom: 5px;
}

.title {
    display: block;
    position: absolute;
    top: 2px;
    left: 0;
    right: 200px;
    text-align: center;
    font-size: 18px;
    overflow: hidden;
    text-overflow: ellipsis;
}

